hambuger-menu update

--- a/Components/Scss/style.scss
+++ b/Components/Scss/style.scss
@@ -33,6 +33,16 @@ body {
     // navbar
     nav {
         background-color: #0E2A47;
+
+        .container {
+            .navbar-toggler {
+                opacity: 1 !important;
+                background-color: #DD1133;
+                border-radius: 0%;
+                height: 35px;
+                box-shadow: none !important;
+            }
+        }
     }
 
     .hero {
@@ -108,6 +118,19 @@ body {
 
                     .mt-4 {
                         .row {
+                            @media screen and (max-width: 768px) {
+                                display: grid !important;
+                                grid-template-columns: 1fr 1fr;
+
+                                @media screen and (max-width: 425px) {
+                                    grid-template-columns: 1fr;
+                                }
+
+                                .col-md-4 {
+                                    width: 100%;
+                                }
+                            }
+
                             .col-md-4 {
                                 .card {
                                     background-color: #1b324b;
