--- a/Components/Scss/style.css
+++ b/Components/Scss/style.css
@@ -28,6 +28,13 @@ body .btn.btn-danger {
 body nav {
   background-color: #0E2A47;
 }
+body nav .container .navbar-toggler {
+  opacity: 1 !important;
+  background-color: #DD1133;
+  border-radius: 0%;
+  height: 35px;
+  box-shadow: none !important;
+}
 body .hero {
   height: 100vh;
   width: 100%;
@@ -87,6 +94,22 @@ body main section.services .container h1::after {
 @media screen and (max-width: 768px) {
   body main section.services .container h1 {
     font-size: 2rem;
+  }
+}
+@media screen and (max-width: 768px) {
+  body main section.services .container .mt-4 .row {
+    display: grid !important;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media screen and (max-width: 768px) and (max-width: 425px) {
+  body main section.services .container .mt-4 .row {
+    grid-template-columns: 1fr;
+  }
+}
+@media screen and (max-width: 768px) {
+  body main section.services .container .mt-4 .row .col-md-4 {
+    width: 100%;
   }
 }
 body main section.services .container .mt-4 .row .col-md-4 .card {
