--- a/Components/Pages/portfolio.html
+++ b/Components/Pages/portfolio.html
@@ -240,7 +240,7 @@
         </section>
 
         <!-- contact -->
-        <section class="contact" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="50" data-aos-offset="200" id="contact">
+        <section class="contact">
             <div class="container text-center" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="50" data-aos-offset="200">
                 <h6 class="text-white">Contact</h6>
                 <h1 class="text-danger">Connect With Me</h1>
