minor ui changes to portfolio page

--- a/Components/Pages/portfolio.html
+++ b/Components/Pages/portfolio.html
@@ -116,7 +116,7 @@
                 <div class="row">
                     <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="50" data-aos-offset="200">
                         <a href="">
-                            <div class="portfolio_box_card">
+                            <div class="portfolio_box_card first">
                                 <div class="project_description p-3">
                                     <h4 class="text-danger">
                                         CNN clone
@@ -132,10 +132,10 @@
 
                     <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100" data-aos-offset="200">
                         <a href="">
-                            <div class="portfolio_box_card">
+                            <div class="portfolio_box_card second">
                                 <div class="project_description p-3">
                                     <h4 class="text-danger">
-                                        CNN clone
+                                        Sanjuma
                                     </h4>
     
                                     <p class="mt-3 small text-light">
@@ -148,10 +148,10 @@
 
                     <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="150" data-aos-offset="200">
                         <a href="">
-                            <div class="portfolio_box_card">
+                            <div class="portfolio_box_card third">
                                 <div class="project_description p-3">
                                     <h4 class="text-danger">
-                                        CNN clone
+                                        Calcultor
                                     </h4>
     
                                     <p class="mt-3 small text-light">
